# DYX

./: .gitignore  README.md  build.zig  flake.nix  index.html  package-lock.json  package.json  result  tsconfig.json  vite.config.ts
app/: layout.tsx  page.tsx
beautiful_ui/app/: globals.css  layout.tsx  page.tsx
beautiful_ui/components/download-manager/: download-item.tsx  download-list.tsx  header.tsx  index.tsx  settings-panel.tsx  sidebar.tsx
beautiful_ui/lib/: download-store.ts  types.ts
browser/firefox/: README.md  background.js  content-script.js  manifest.json
components/dyx/: add-download-dialog.tsx  download-area.tsx  download-item.tsx  sidebar.tsx  title-bar.tsx
hooks/: use-dyx-downloads.ts
lib/: dyx-api.ts  dyx-types.ts
packaging/native-messaging/firefox/: app.dyx.native_host.json.in
qt/: CMakeLists.txt
qt/qml/: Main.qml
qt/qml/components/: AddDownloadDialog.qml  DirectoryPickerDialog.qml  DownloadArea.qml  DownloadItem.qml  DyxBadge.qml  DyxButton.qml  DyxCard.qml  DyxDialog.qml  DyxIconButton.qml  DyxInput.qml  DyxProgressBar.qml  DyxSidebarItem.qml  IconGlyph.qml  SettingsArea.qml  Sidebar.qml  TitleBar.qml
qt/qml/theme/: Colors.qml  Spacing.qml  Tokens.qml  Typography.qml
qt/src/: appcommandbridge.cpp  appcommandbridge.h  backendclient.cpp  backendclient.h  downloadlistmodel.cpp  downloadlistmodel.h  firefoxcatcherlog.cpp  firefoxcatcherlog.h  iconprovider.cpp  iconprovider.h  main.cpp  relaymain.cpp  settingsmodel.cpp  settingsmodel.h  uistate.cpp  uistate.h
scripts/: register-firefox-native-host.sh  unregister-firefox-native-host.sh
src/: App.tsx  app.zig  axel.zig  backend_ipc.zig  backend_main.zig  core_app.zig  download_manager.zig  history.zig  ipc.zig  main.tsx  main.zig  models.zig  native_host_main.zig  settings.zig  ui_server.zig
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
styles/: globals.css
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  globals.css  main.tsx
ui/src/components/download-manager/: download-item.tsx  download-list.tsx  header.tsx  index.tsx  settings-panel.tsx  sidebar.tsx
ui/src/components/ui/: button.tsx  dialog.tsx  dropdown-menu.tsx  icons.tsx  input.tsx  label.tsx  scroll-area.tsx  separator.tsx  sheet.tsx  switch.tsx  tooltip.tsx
ui/src/lib/: api.ts  download-store.ts  types.ts
